# bloominghealth-takehome

./: . gitignore  .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/modules/evaluation/: __init__.py  prompts.py  router.py  schemas.py  services.py
app/modules/prediction/: __init__.py  features.py  model_factory.py  router.py  schemas.py
app/modules/prompts/: router.py  schemas.py  services.py
scripts/: generate_calls.py  verify_spec.py
