[project]
name = "prompt-similarity-service"
version = "0.1.0"
description = "Prompt Similarity & Deduplication Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.2.0",
    "pymilvus>=2.3.0",
    "milvus-lite>=2.4.0",
    "hdbscan>=0.8.33",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "scipy>=1.11.0",
    "polars>=0.20.0",
    "scikit-learn>=1.4.0",
    "catboost>=1.2.0",
    "lightgbm>=4.3.0",
    "joblib>=1.3.0",
    "mlflow>=2.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "faker>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
